# EPUB-Corrector

./: .coverage  .env.example  .gitignore  README.md  build_exe.py  output.epub  pyproject.toml  schema.txt
locales/es/LC_MESSAGES/: messages.mo  messages.po
src/: gui_entry.py  main.py
src/epub_corrector/: cli.py  config.py  core.py  engine.py  epub_io.py  glossary.py  gui.py  html_parser.py  i18n.py  llm.py  persistence.py  prefs.py  safety.py  summary.py  types.py
src/epub_corrector/gui/: __init__.py  app.py  base_tab.py  batch_tab.py  debug_tab.py  glossary_tab.py  log_handler.py  review_bridge.py  review_panel.py  simple_tab.py  summary_tab.py  translate_tab.py  utils.py  widgets.py  worker.py
tests/: test_cli.py  test_config.py  test_engine.py  test_epub_io.py  test_glossary.py  test_gui.py  test_html_parser.py  test_llm.py  test_persistence.py  test_safety.py  test_summary.py  test_types.py
