[project]
name = "epubcorrector"
version = "0.2.0"
description = "EPubCorrector - Correct EPub grammatical errors using LLMStudio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"beautifulsoup4>=4.13.0",
	"ebooklib>=0.19",
	"lxml>=5.0.0",
	"openai>=1.40.0",
	"python-dotenv>=1.0",
]

[project.scripts]
epub-corrector = "epub_corrector.cli:main"
epub-corrector-gui = "epub_corrector.gui:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["mypy>=1.0", "pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.9.0"]

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TID", "TCH"]
lint.ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=epub_corrector --cov-report=term-missing"
